Fix: swagger documentation
